@@ -24,6 +24,10 @@ EXTRA_DIST = male.png female.png
 services_DATA = kttsd_hadifixplugin.desktop
 servicesdir = $(kde_servicesdir)
 
+# Data files.
+festivalintxsltdatadir = $(kde_datadir)/kttsd/hadifix/xslt/
+festivalintxsltdata_DATA = SSMLtoTxt2pho.xsl
+
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/16x16/actions/
 	$(INSTALL_DATA) $(srcdir)/male.png $(DESTDIR)$(kde_icondir)/hicolor/16x16/actions/male.png
